--- a/FluxGrouper.csproj
+++ b/FluxGrouper.csproj
@@ -32,28 +32,19 @@
     <Reference Include="FrooxEngine">
       <HintPath>$(GamePath)Resonite_Data\Managed\FrooxEngine.dll</HintPath>
     </Reference>
+    <Reference Include="ProtoFluxBindings">
+      <HintPath>$(GamePath)Resonite_Data\Managed\ProtoFluxBindings.dll</HintPath>
+    </Reference>
+    <Reference Include="ProtoFlux.Nodes.Core">
+    <HintPath>$(GamePath)Resonite_Data\Managed\ProtoFlux.Nodes.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FrooxEngine">
+      <HintPath>$(GamePath)Resonite_Data\Managed\FrooxEngine.dll</HintPath>
+    </Reference>
     <Reference Include="ResoniteModLoader">
       <HintPath>$(GamePath)ResoniteModLoader.dll</HintPath>
       <HintPath>$(GamePath)Libraries\ResoniteModLoader.dll</HintPath>
     </Reference>
-    <Reference Include="SkyFrost.Base">
-      <HintPath>$(GamePath)Resonite_Data\Managed\SkyFrost.Base.dll</HintPath>
-    </Reference>
-    <Reference Include="FrooxEngine.Store">
-      <HintPath>$(GamePath)Resonite_Data\Managed\FrooxEngine.Store.dll</HintPath>
-    </Reference>
-		<Reference Include="SkyFrost.Base.Models">
-			<HintPath>$(GamePath)Resonite_Data\Managed\SkyFrost.Base.Models.dll</HintPath>
-		</Reference>
-    		<Reference Include="ProtoFlux.Nodes.FrooxEngine">
-			<HintPath>$(GamePath)Resonite_Data\Managed\ProtoFlux.Nodes.FrooxEngine.dll</HintPath>
-		</Reference>
-		<Reference Include="System.Net.Http">
-			<HintPath>$(GamePath)Resonite_Data\Managed\System.Net.Http.dll</HintPath>
-		</Reference>
-		<Reference Include="System.Threading.Tasks.Extensions">
-    <HintPath>$(GamePath)Resonite_Data\Managed\System.Threading.Tasks.Extensions.dll</HintPath>
-		</Reference>
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(CopyToMods)'=='true'">
